// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TWAMM Hook #executeTWAMMOrders when both order pools are selling gas crossing 1 initialized tick 1`] = `
Object {
  "calldataByteLength": 164,
  "gasUsed": 552178,
}
`;

exports[`TWAMM Hook #executeTWAMMOrders when both order pools are selling gas crossing 2 initialized ticks 1`] = `
Object {
  "calldataByteLength": 164,
  "gasUsed": 697054,
}
`;

exports[`TWAMM Hook #executeTWAMMOrders when both order pools are selling gas with no initialized ticks 1`] = `
Object {
  "calldataByteLength": 164,
  "gasUsed": 430648,
}
`;

exports[`TWAMM Hook #executeTWAMMOrders when only one pool is selling gas crossing 1 initialized tick 1`] = `
Object {
  "calldataByteLength": 164,
  "gasUsed": 343190,
}
`;

exports[`TWAMM Hook #executeTWAMMOrders when only one pool is selling gas crossing 2 initialized ticks 1`] = `
Object {
  "calldataByteLength": 164,
  "gasUsed": 366233,
}
`;

exports[`TWAMM Hook #executeTWAMMOrders when only one pool is selling gas crossing no initialized tick 1`] = `
Object {
  "calldataByteLength": 164,
  "gasUsed": 317863,
}
`;
